--- a/src/SplashScreen/Splash.css
+++ b/src/SplashScreen/Splash.css
@@ -3,9 +3,37 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #111111;
+    background-color: var(--background-color);
 }
 
-.Text{
+.logo-anim {
+    animation: logoAnimation 1s ease-in-out forwards;
+}
+  
+.name-anim {
+    opacity: 0;
+    animation: nameAnimation 1s ease-in-out forwards;
     color: aliceblue;
+    font-family: "Bangers", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 100;
+}
+
+@keyframes logoAnimation {
+    0% {
+        transform: translatex(10%);
+    }
+    100% {
+        transform: translatex(-10%);
+    }
+}
+
+@keyframes nameAnimation {
+    0% {
+      opacity: 0;
+      transform: translatex(-20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translatex(0);
+    }
 }
