--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,5 @@
 
   /*-------------Colors---------------*/
   --background-color: #111111;
+  --gradient-color: linear-gradient(to right, #6846EC,#B2A8DA, #BF83C9);
 }
