--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -1,20 +1,129 @@
 .Login{
-    height: 100vh;
+    background-color: var(--background-color);
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
-    background-color: var(--background-color);
+    justify-content: center;
+    height: 100vh;
+    color: #fff;
+    gap: 100px;
+    font-size: 13px;
 }
 
-.loginform{
+.form{
     display: flex;
     flex-direction: column;
+    gap: 20px;
 }
 
-.LoginText{
+.LogoSection{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.LogoSection h1{
     background: var(--gradient-color);
     -webkit-text-fill-color: transparent;
 	-webkit-background-clip: text;
     background-clip: text;
+    margin-top: 10px;
+    font-size: 30px;
+}
+
+.Options{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.buttons{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.Options button{
+    border-image: linear-gradient(to right, #6846EC,#B2A8DA, #BF83C9) 1;
+    background-color: transparent;
+    cursor: pointer;
+    width: 200px;
+}
+
+.blackText{
+    color: #C5B8F8;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 500;
+    margin: 10px;
+    line-height: normal;
+}
+
+.text-with-lines {
+    display: flex;
+    align-items: center;
+}
+  
+.horizontal-line {
+    flex-grow: 1;
+    height: 1px;
+    width: 150px;
+    background-image: linear-gradient(to right, #6846EC,#B2A8DA, #BF83C9);
+    margin: 0px 20px;
+}
+
+.Inputs{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    background-color: #2C232F ;
+    border-radius: 4px;
+    color: #fff;
+    box-sizing: border-box;
+}
+
+.normal{
+    font-size: 12px;
+    font-weight: 100;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    margin-top: 40px;
+    border: none;
+    cursor: pointer;
+    color: #D0A5D7;
+}
+
+input[type=password], select {
+    width: 100%;
+    padding: 12px 20px;
+    background-color: #2C232F ;
+    border-radius: 4px;
+    color: #fff;
+    box-sizing: border-box;
+}
+
+
+.space{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.space button{
+    border-image: linear-gradient(to right, #6846EC,#B2A8DA, #BF83C9) 1;
+    background-color: transparent;
+    cursor: pointer;
+    color: #fff;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 20px 10px 20px;
 }
