modified:   src/App.css 	modified:   src/App.js 	modified:   src/Components/NavBar.css 	modified:   src/Components/NavBar.js 	new file:   src/Pages/Help&support/helpsupport.css 	modified:   src/Pages/Help&support/helpsupport.js 	modified:   src/Pages/Home/Home.css 	modified:   src/Pages/Home/Home.js

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,16 @@
   --background-color: #111111;
   --gradient-color: linear-gradient(to right, #6846EC,#B2A8DA, #BF83C9);
 }
+
+.layout{
+  display: flex;
+  flex-direction: row;
+  width: 100vh;
+  height: 100vh;
+  gap: 20px;
+}
+
+body{
+  background-color: #111111;
+  color: aliceblue;
+}
