--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -1,27 +1,34 @@
 .nav{
     height: 100%;
-    display: flex;
-    flex-direction: column;
     background-color: #2C232F;
+    width: 230px;
 }
 
-.Nav_List{
+.Conatiner{
     display: flex;
     flex-direction: column;
+    padding: 30px;
+    gap: 60px;
 }
 
-.nav_name{
-    color: #003366;
-    font: var(--body-font);
+.Menu1{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
 
 .Menu2{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    gap: 30px;
+    margin-top: 130px;
 }
 
-.Nav_List2{
+.link{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+    text-decoration: none;
+    color: aliceblue;
 }
