modified:   src/App.css 	new file:   src/Assets/home_inactive.png 	modified:   src/Components/NavBar.css 	modified:   src/Components/NavBar.js

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 /*-------------Google Fonts---------------*/
 @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap');
 
 /*-------------CSS Variable---------------*/
 :root{
