--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,3 +1,32 @@
-white{
-    color: aqua;
+.topBar{
+    background-color: #2C232F;
+    width: 100vh;
+}
+
+.namebox{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+}
+
+.namebox h1{
+    margin: 0px;
+    font-size: 16px;
+    font-family: "Cabin", sans-serif;
+    color: #B5ABAB;
+    font-weight: 100;
+}
+
+.namebox h2{
+    margin: 0px;
+    font-family: "Cabin", sans-serif;
+    color: #A28DF5;
+    font-size: 18px;
+    font-weight: 100;
+    text-decoration: none;
+}
+
+.name{
+    text-decoration: none;
 }
