--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,17 @@
 .layout{
   display: flex;
   flex-direction: row;
+  position: relative;
   height: 100vh;
   gap: 20px;
+}
+
+.splash {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 body{
