--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -1,7 +1,8 @@
 .nav{
-    height: 100%;
+    height: 100vh;
     background-color: #2C232F;
     width: 230px;
+    border-radius: 10px;
 }
 
 .Conatiner{
