--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -6,6 +6,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding: 10px 20px 10px 20px;
+    
 }
 
 .top{
@@ -16,7 +18,6 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 10px;
 }
 
 .namebox h1{
