--- a/src/TicTacToe/tictactoe.css
+++ b/src/TicTacToe/tictactoe.css
@@ -5,6 +5,8 @@
   
   .board {
     display: grid;
+    align-items: center;
+    justify-content: center;
     grid-template-columns: repeat(3, 100px);
     grid-template-rows: repeat(3, 100px);
     gap: 5px;
