modified:   src/App.js 	new file:   src/Assets/TicTacToe_poster.png 	deleted:    src/Assets/snake.jpeg 	new file:   src/Assets/snake_poster.png 	new file:   src/Assets/tetris.png 	modified:   src/Components/NavBar.css 	modified:   src/Pages/Home/Home.css 	modified:   src/Pages/Home/Home.js 	new file:   src/Tetris/TetrisGame.css 	new file:   src/Tetris/TetrisGame.js

--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -1,7 +1,6 @@
 .nav{
-    height: 100vh;
     background-color: #2C232F;
-    width: 230px;
+    max-width: fit-content;
     border-radius: 10px;
 }
 
