--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -36,7 +36,7 @@
 nav ul {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 5px;
     list-style-type: none;
     padding: 0;
 }
@@ -44,16 +44,18 @@ nav ul {
 nav ul li {
     display: flex;
     flex-direction: row;
-    gap: 20px;
 }
   
 nav ul li a {
     text-decoration: none;
     font-size: 15px;
+    padding: 10px;
+    border-radius: 10px;
     color: #B5ABAB;
 }
   
 nav ul li a.active {
     color: white;
     font-weight: bold;
+    background-color: #6846EC;
 }
