modified:   src/Components/NavBar.css 	modified:   src/Components/NavBar.js

--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -17,6 +17,12 @@
     gap: 30px;
 }
 
+.logobutton{
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
 .Menu2{
     display: flex;
     flex-direction: column;
