--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -7,7 +7,9 @@
 .Conatiner{
     display: flex;
     flex-direction: column;
-    padding: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
     gap: 60px;
 }
 
