--- a/src/Pages/Games Category/gamescategory.css
+++ b/src/Pages/Games Category/gamescategory.css
@@ -1,3 +1,34 @@
-.wholeg{
+.games{
     margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.G1 img{
+    width: 200px;
+    height: 250px;
+}
+
+.titleghj{
+    padding: 2px;
+    font-size: 18px;
+    margin: 5px;
+    text-align: left;
+    align-items: center;
+    text-align: center;
+    font-family: "Cabin", sans-serif;
+    color: #ffffff;
+}
+
+.row1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.row2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
